--- a/index.html
+++ b/index.html
@@ -1,10 +1,105 @@
 <!DOCTYPE html>
-<html>
- <head>
-   <title>승기 바보  멍청이</title>
- </head>
- <body>
-   <h1>진짜승기 바보</h1>
-   <p>장만두</p>
- </body>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>한아람초 4학년 자기소개</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f0f8ff;
+      color: #333;
+    }
+
+    header {
+      background-color: #4caf50;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    .container {
+      padding: 1.5rem;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    .card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+    }
+
+    h2 {
+      color: #4caf50;
+    }
+
+    ul {
+      padding-left: 1.2rem;
+    }
+
+    .emoji {
+      font-size: 1.5rem;
+      margin-right: 0.5rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #e0f2f1;
+      font-size: 0.9rem;
+      color: #666;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        font-size: 16px;
+      }
+
+      .card {
+        padding: 1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>안녕하세요! 👋 저는 한아람초 4학년이에요</h1>
+  </header>
+
+  <div class="container">
+
+    <div class="card">
+      <h2>🧒 내 소개</h2>
+      <p>안녕! 나는 <strong>한아람초등학교 4학년</strong>이야. 요즘 <strong>로블록스</strong>랑 <strong>코딩쿠루</strong>에 푹 빠져있어! 🎮👾</p>
+    </div>
+
+    <div class="card">
+      <h2>💚 내가 좋아하는 것들</h2>
+      <ul>
+        <li><span class="emoji">🎮</span>게임: 로블록스 최고!</li>
+        <li><span class="emoji">👨‍💻</span>코딩: 코딩쿠루가 짱이야</li>
+        <li><span class="emoji">🚴</span>운동: 오늘은 자전거 타고 왔어!</li>
+        <li><span class="emoji">🍽️</span>음식: 김치볶음밥 진짜 좋아해! 김치는 한국인의 자부심이지 🇰🇷</li>
+        <li><span class="emoji">🏕️</span>취미: 주말마다 캠핑을 즐겨!</li>
+      </ul>
+    </div>
+
+    <div class="card">
+      <h2>🌟 나의 꿈</h2>
+      <p>나는 나중에 <strong>게임 개발자</strong>가 되고 싶어! 내가 좋아하는 게임을 직접 만들고 싶거든 😎</p>
+    </div>
+
+  </div>
+
+  <footer>
+    이 웹페이지는 장만두가 도와줬어요! 🥟
+  </footer>
+
+</body>
 </html>
