--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>한아람초 4학년 자기소개</title>
+  <title>장만두</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -82,10 +82,25 @@
     <div class="card">
       <h2>💚 내가 좋아하는 것들</h2>
       <ul>
-        <li><span class="emoji">🎮</span>게임: 로블록스 최고!</li>
+        <li>
+          <span class="emoji">🎮</span>게임: 로블록스 최고!
+          <div>
+            <img src="images.png" width="100%">
+          </div>
+        </li>
         <li><span class="emoji">👨‍💻</span>코딩: 코딩쿠루가 짱이야</li>
-        <li><span class="emoji">🚴</span>운동: 오늘은 자전거 타고 왔어!</li>
-        <li><span class="emoji">🍽️</span>음식: 김치볶음밥 진짜 좋아해! 김치는 한국인의 자부심이지 🇰🇷</li>
+        <li>
+          <span class="emoji">🚴</span>운동: 오늘은 자전거 타고 왔어!
+          <div>
+            <img src="bicycle.jpg" width="100%">
+          </div>
+        </li>
+        <li>
+          <span class="emoji">🍽️</span>음식: 김치볶음밥 진짜 좋아해! 김치는 한국인의 자부심이지 🇰🇷
+          <div>
+            <img src="kimchi-fried-rice.jpg" width="100%">
+          </div>
+        </li>
         <li><span class="emoji">🏕️</span>취미: 주말마다 캠핑을 즐겨!</li>
       </ul>
     </div>
