--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
       color: #666;
     }
 
+    .link{
+      width: 800px;
+      margin:0 auto;
+    }
+    .link a{
+      display: inline-flex;
+      padding: 1em;
+      border: 1px solid blue;
+      background-color: blue;
+      color: white;
+      text-decoration: none;
+    
+    }
     @media (max-width: 600px) {
       body {
         font-size: 16px;
@@ -71,8 +84,9 @@
   <header>
     <h1>안녕하세요! 👋 저는 한아람초 4학년이에요</h1>
   </header>
-  <div>
-  <a href="https://www.roblox.com/ko">로블록스<</a>
+  <div class="link">
+    <a href="https://www.roblox.com/ko">로블록스</a>
+    <a href="https://codingcrew.co.kr">코딩크루</a>
   </div>
 
   <div class="container">
