--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
     }
 
     .link{
+      
       width: 800px;
-      margin:0 auto;
+      margin:20px auto;
     }
     .link a{
       display: inline-flex;
@@ -67,6 +68,11 @@
       color: white;
       text-decoration: none;
     
+    }
+    .link a: hover{
+      cursor: pointer; 
+      color: blue;
+      background_color: white;
     }
     @media (max-width: 600px) {
       body {
