--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
       text-decoration: none;
     
     }
-    .link a: hover{
+    .link a:hover{
       cursor: pointer; 
       color: blue;
-      background_color: white;
+      background-color: white;
     }
     @media (max-width: 600px) {
       body {
